[gd_scene load_steps=11 format=3 uid="uid://cmjp8iqyl8p8q"]

[ext_resource type="PackedScene" uid="uid://c4vcy61g6muyu" path="res://scenes/2d/characters/Soul.tscn" id="1_1niic"]
[ext_resource type="Texture2D" uid="uid://defaaj7nge71" path="res://assets/2d/characters/new/мара 0.1.PNG" id="1_4vdcg"]
[ext_resource type="Script" uid="uid://colt06nrwoodo" path="res://scripts/2d/characters/soul.gd" id="2_1niic"]
[ext_resource type="Script" uid="uid://v254gqat2uch" path="res://scripts/2d/environment/BattleController.gd" id="2_5p8w8"]
[ext_resource type="Texture2D" uid="uid://c27u0o5ylfjhe" path="res://assets/2d/environment/IMG_0636.PNG" id="3_5p8w8"]
[ext_resource type="PackedScene" uid="uid://1ag12pvvb2uu" path="res://scenes/2d/environment/capture_zone.tscn" id="4_aqiqb"]
[ext_resource type="Texture2D" uid="uid://bln3pg8bmoixx" path="res://assets/2d/environment/new/плашка 3.PNG" id="5_q6iye"]
[ext_resource type="Texture2D" uid="uid://bqq6dos0cqqvq" path="res://assets/2d/environment/new/плашка 2.PNG" id="6_3nml5"]

[sub_resource type="SystemFont" id="SystemFont_4vdcg"]
font_names = PackedStringArray("Monomakh Unicode")

[sub_resource type="SystemFont" id="SystemFont_q6iye"]
font_names = PackedStringArray("Monomakh Unicode")
font_stretch = 200

[node name="BattleScene" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="Background"]
position = Vector2(311.00003, 228)
scale = Vector2(0.12, 0.12)
texture = ExtResource("1_4vdcg")

[node name="SoulArea" type="ColorRect" parent="."]
custom_minimum_size = Vector2(400, 300)
offset_left = 155.0
offset_top = 389.0
offset_right = 1087.0
offset_bottom = 689.0
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="SoulArea"]
light_mask = 2
visibility_layer = 2
position = Vector2(483.99997, 4)
scale = Vector2(0.3098958, 0.31111112)
texture = ExtResource("3_5p8w8")

[node name="Soul" parent="SoulArea" instance=ExtResource("1_1niic")]
script = ExtResource("2_1niic")

[node name="IntimidateButton" type="Button" parent="."]
offset_left = 765.0
offset_top = 272.0
offset_right = 1064.043
offset_bottom = 409.0
theme_override_fonts/font = SubResource("SystemFont_4vdcg")
theme_override_font_sizes/font_size = 35
text = "Испуг
"
icon = ExtResource("5_q6iye")
flat = true
icon_alignment = 1
expand_icon = true

[node name="CaptureButton" type="Button" parent="."]
offset_left = 702.0
offset_top = 149.0
offset_right = 1068.0
offset_bottom = 335.0
theme_override_fonts/font = SubResource("SystemFont_q6iye")
theme_override_font_sizes/font_size = 35
text = "Запечатывание
"
icon = ExtResource("6_3nml5")
flat = true
icon_alignment = 1
expand_icon = true

[node name="BattleController" type="Node" parent="."]
script = ExtResource("2_5p8w8")

[node name="SoulHealth" type="Label" parent="."]
visible = false
offset_left = 635.0
offset_top = 5.0
offset_right = 795.0
offset_bottom = 28.0
text = "Здоровье души: 2/2"

[node name="BattleText" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 561.0
offset_top = 72.0
offset_right = 669.0
offset_bottom = 95.0
grow_horizontal = 2
text = "Fisting is 300$"

[node name="CaptureZone" parent="." instance=ExtResource("4_aqiqb")]
position = Vector2(-101, -1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
zoom = Vector2(0.9, 0.9)
